{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 30,
  "lineage": "e2b150b5-468c-6899-15b1-39eca956e7f0",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01075de5e86d5103f",
            "public_dns": "ec2-54-193-212-44.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.212.44",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-vpc-us-west-1a",
              "environment": "us-west-1",
              "owners": "SAP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:358687359034:internet-gateway/igw-0a1e6bfe505a7685e",
            "id": "igw-0a1e6bfe505a7685e",
            "owner_id": "358687359034",
            "tags": {
              "Name": "test-vpc",
              "environment": "us-west-1",
              "owners": "SAP"
            },
            "vpc_id": "vpc-02a3c974d02b3f8e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a1e6bfe505a7685e",
            "id": "r-rtb-01d6a36522a0d9c101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01d6a36522a0d9c10",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fa46f8547130099e",
            "owner_id": "358687359034",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-vpc-db",
              "environment": "us-west-1",
              "owners": "SAP"
            },
            "vpc_id": "vpc-02a3c974d02b3f8e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a91451966f5a0971",
            "owner_id": "358687359034",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-vpc-private",
              "environment": "us-west-1",
              "owners": "SAP"
            },
            "vpc_id": "vpc-02a3c974d02b3f8e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01d6a36522a0d9c10",
            "owner_id": "358687359034",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-vpc-public",
              "environment": "us-west-1",
              "owners": "SAP"
            },
            "vpc_id": "vpc-02a3c974d02b3f8e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:358687359034:subnet/subnet-051f7e7a6a1f5d025",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.152.0/24",
            "id": "subnet-051f7e7a6a1f5d025",
            "map_public_ip_on_launch": false,
            "owner_id": "358687359034",
            "tags": {
              "Name": "test-vpc-db-us-west-1b",
              "Type": "database-subnets",
              "environment": "us-west-1",
              "owners": "SAP"
            },
            "vpc_id": "vpc-02a3c974d02b3f8e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:358687359034:subnet/subnet-035e9dee6e20dde5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-035e9dee6e20dde5f",
            "map_public_ip_on_launch": false,
            "owner_id": "358687359034",
            "tags": {
              "Name": "test-vpc-private-us-west-1b",
              "Type": "private-subnets",
              "environment": "us-west-1",
              "owners": "SAP"
            },
            "vpc_id": "vpc-02a3c974d02b3f8e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:358687359034:subnet/subnet-02fcde9dfff471f71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-02fcde9dfff471f71",
            "map_public_ip_on_launch": true,
            "owner_id": "358687359034",
            "tags": {
              "Name": "test-vpc-public-us-west-1b",
              "Type": "Public Subnets",
              "environment": "us-west-1",
              "owners": "SAP"
            },
            "vpc_id": "vpc-02a3c974d02b3f8e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:358687359034:vpc/vpc-02a3c974d02b3f8e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0081a948bbff76bc2",
            "default_route_table_id": "rtb-00fa779e70feee6d8",
            "default_security_group_id": "sg-0994d29e2c2668d3c",
            "dhcp_options_id": "dopt-8a7268ed",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02a3c974d02b3f8e1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00fa779e70feee6d8",
            "owner_id": "358687359034",
            "tags": {
              "Name": "test-vpc",
              "environment": "us-west-1",
              "owners": "SAP"
            }
          }
        }
      ]
    }
  ]
}